--- a/template/calendar.html
+++ b/template/calendar.html
@@ -44,7 +44,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Dashboard</title>
+    <title>Leetcode Scheduler</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -59,9 +59,9 @@
       <div class="collapse navbar-collapse" id="navbarMenu">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a href="#" class="nav-link">Summary</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">ToDo</a></li>
+          <li class="nav-item"><a href="home" class="nav-link">ToDo</a></li>
           <li class="nav-item active">
-            <a href="#" class="nav-link">Calandar</a>
+            <a href="calendar" class="nav-link">Calandar</a>
           </li>
         </ul>
         <ul class="navbar-nav">
