--- a/template/home.html
+++ b/template/home.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="../static/css/home.css" />
     <link rel="stylesheet" type="text/css" href="../static/css/stopwatch.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Dashboard</title>
+    <title>Leetcode Scheduler</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -33,8 +33,8 @@
       <div class="collapse navbar-collapse" id="navbarMenu">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a href="#" class="nav-link">Summary</a></li>
-          <li class="nav-item active"><a href="#" class="nav-link">ToDo</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Calandar</a></li>
+          <li class="nav-item active"><a href="home" class="nav-link">ToDo</a></li>
+          <li class="nav-item"><a href="calendar" class="nav-link">Calandar</a></li>
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item"><a href="#" class="nav-link">Users</a></li>
