[DB] get problem count, practice duration

--- a/template/home.html
+++ b/template/home.html
@@ -62,7 +62,7 @@
             Add
           </button>
           <div class="col-3">
-            <h5 id="add-msg">msg</h5>
+            <h5 id="add-msg"></h5>
           </div>
         </form>
 
