Add summary page

--- a/template/home.html
+++ b/template/home.html
@@ -32,7 +32,7 @@
       <a href="#" class="navbar-brand">Leetcode Scheduler</a>
       <div class="collapse navbar-collapse" id="navbarMenu">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item"><a href="#" class="nav-link">Summary</a></li>
+          <li class="nav-item"><a href="summary" class="nav-link">Summary</a></li>
           <li class="nav-item active"><a href="home" class="nav-link">ToDo</a></li>
           <li class="nav-item"><a href="calendar" class="nav-link">Calandar</a></li>
         </ul>
